--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container table-responsive-md">
-        <table class="table table-condensed table-hover" align="center" width="984px" cellspacing="5" border="1">
+        <table class="table table-condensed table-hover w-auto" align="center" width="984px" cellspacing="5" border="1">
             <thead>
                 <tr class="table-primary">
                     <th width="50">Posting Date</th>
