set up complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <table align="center" width="984px" cellspacing="5" border="1">
+        <table>
             <tr>
                 <th width="50">Posting Date</th>
                 <th width="250">Job Title</th>
@@ -24,9 +24,9 @@
                 <th width="95">More Information</th>
             </tr>
             <tr>
-                <td align="center">22/08</td>
+                <td>22/08</td>
                 <td>DURGASOFT</td>
-                <td align="center">HYDERABAD</td>
+                <td>HYDERABAD</td>
                 <td>MARKETING</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
