--- a/index.html
+++ b/index.html
@@ -7,12 +7,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jobs Page</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
+
+
+        <!-- =============================================================== -->
+        <!-- Navigation starts from here -->
+        <!-- =============================================================== -->
+
+
+        <div class="head">
+            <ul>
+                <li>
+                    <h1>Shaktijobs.com</h1>
+                </li>
+                <li><img src="#" alt="BANNERS"></li>
+            </ul>
+        </div>
+        <nav class="topnav" id="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">Post A Job</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="#">Log In</a>
+            <a href="#">Register</a>
+
+        </nav>
+
+        <hr>
+        <hr>
+
+        <div class="free">
+
+        </div>
+        <hr>
+
+        <!-- =============================================================== -->
+        <!-- Table starts from here -->
+        <!-- =============================================================== -->
+
+
+
         <table>
             <tr>
                 <th width="50">Posting Date</th>
@@ -297,7 +339,22 @@
 
         </table>
     </div>
+    <footer class="last">
+        <p>Copyright &copy; 2018 sumit pvt. ltd. All Rights Reserved.</p>
+    </footer>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> -->
+    <script type="text/javascript">
+        function myFunction() {
+            var x = document.getElementById("navbar");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 </body>
+
+</html>
