--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jobs Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -72,7 +73,7 @@
                 <td>MARKETING</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -81,7 +82,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -90,7 +91,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -99,7 +100,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -108,7 +109,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -117,7 +118,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -126,7 +127,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -135,7 +136,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -144,7 +145,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -153,7 +154,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -162,7 +163,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -171,7 +172,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -180,7 +181,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -189,7 +190,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -198,7 +199,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -207,7 +208,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -216,7 +217,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -225,7 +226,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -234,7 +235,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -243,7 +244,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -252,7 +253,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -261,7 +262,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -270,7 +271,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -279,7 +280,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -288,7 +289,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -297,7 +298,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -306,7 +307,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -315,7 +316,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -324,7 +325,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
             <tr>
                 <td>lorem ipsum</td>
@@ -333,7 +334,7 @@
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
                 <td>lorem ipsum</td>
-                <td><a href="# ">lorem ipsum</a></td>
+                <td><a href="# " target="blank">lorem ipsum</a></td>
             </tr>
 
 
